[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/ListenerPlayerIndication.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/red_dot.png" type="Texture" id=2]

[node name="ListenerPlayerIndication" type="Area2D"]
position = Vector2( -1, 1 )
script = ExtResource( 1 )

[node name="indicate_up" type="Sprite" parent="."]
position = Vector2( 0, -60 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="indicate_down" type="Sprite" parent="."]
position = Vector2( 0, 60 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="indicate_left" type="Sprite" parent="."]
position = Vector2( -60, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="indicate_right" type="Sprite" parent="."]
position = Vector2( 60, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="indicate_upper_left" type="Sprite" parent="."]
position = Vector2( -42, -42 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="indicate_upper_right" type="Sprite" parent="."]
position = Vector2( 42, -42 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="indicate_lower_left" type="Sprite" parent="."]
position = Vector2( -42, 42 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="indicate_lower_right" type="Sprite" parent="."]
position = Vector2( 42, 42 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
